<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoMitsubishiRobotics_Control_v_1_x_x" Id="{a4b9a87d-81d2-0a65-37b7-800b619c3176}">
    <Declaration><![CDATA[TYPE TcoMitsubishiRobotics_Control_v_1_x_x : 
STRUCT	
	

	
	{attribute addProperty Name "<#Interuption actually running instruction#>"}
	Interupt : BOOL;

	{attribute addProperty Name "<#Load program#>"}
	LoadProg : BOOL;	

	{attribute addProperty Name "<#Load and run program#>"}
	LoadAndStartProg : BOOL;

	{attribute addProperty Name "<#Switch off the motors#>"}
	MotorOff : BOOL;	

	{attribute addProperty Name "<#Switch on the motors#>"}
	MotorOn : BOOL;	

	{attribute addProperty Name "<#Switch on the motors and start program#>"}
	MotorOnAndStart : BOOL; 

	{attribute addProperty Name "<#Emergency stop acknowledge#>"}
	ResetEmgStop : BOOL;

	{attribute addProperty Name "<#Error acknowledge#>"}
	ResetError : BOOL; 

	{attribute addProperty Name "<#Program start#>"}
	StartProgram : BOOL;	

	{attribute addProperty Name "<#Program start at main#>"}
	StartAtMain : BOOL; 	

	{attribute addProperty Name "<#Program stop#>"}
	StopProgram : BOOL;	

	{attribute addProperty Name "<#Stop movement-quick#>"}
	QuickStop : BOOL; 

	{attribute addProperty Name "<#Stop movement-soft#>"}
	SoftStop : BOOL;	

	{attribute addProperty Name "<#Stop program at the end of the cycle#>"}
	StopCycle : BOOL; 	

	{attribute addProperty Name "<#Stop program at the end of the instruction#>"}
	StopInstruction : BOOL;

	{attribute addProperty Name "<#Speed limitation#>"}
	LimitSpeed : BOOL;
	
	{attribute addProperty Name "<#Master mode#>"}
	MasterMode : BYTE;
	
	{attribute addProperty Name "<#Tool 1 retract#>"}
	Tool_1_Retract : BOOL;

	{attribute addProperty Name "<#Tool 1 extend#>"}
	Tool_1_Extend : BOOL;

	{attribute addProperty Name "<#Tool 2 retract#>"}
	Tool_2_Retract : BOOL;

	{attribute addProperty Name "<#Tool 2 extend#>"}
	Tool_2_Extend : BOOL;

	{attribute addProperty Name "<#Tool 3 retract#>"}
	Tool_3_Retract : BOOL;

	{attribute addProperty Name "<#Tool 3 extend#>"}
	Tool_3_Extend : BOOL;

	{attribute addProperty Name "<#Tool 4 retract#>"}
	Tool_4_Retract : BOOL;

	{attribute addProperty Name "<#Tool 4 extend#>"}
	Tool_4_Extend : BOOL;

	{attribute addProperty Name "<#Zones#>"}
	Zone : BYTE;

	{attribute addProperty Name "<#In position#>"}
	InPosition : BYTE;

	{attribute addProperty Name "<#Action number#>"}
	ActionNo : BYTE; 

	{attribute addProperty Name "<#Global robot speed#>"}
	GlobalSpeed : BYTE; 

	{attribute addProperty Name "<#Tool number#>"}
	ToolNo : BYTE; 	

	{attribute addProperty Name "<#Workobject number#>"}
	WorkobjectNo : BYTE; 

	{attribute addProperty Name "<#Point number#>"}
	PointNo : BYTE; 		

	{attribute addProperty Name "<#User specific speed 1#>"}
	UserSpecSpeed1 : REAL; 

	{attribute addProperty Name "<#User specific speed 2#>"}
	UserSpecSpeed2 : REAL; 

	


	{attribute  addProperty Name "<#Coordinates#>"}     
	Coordinates : TcoAbstractions.TcoRoboticsCoordinates; 		
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>